CocacolaProject/src/objects/ProfitCenterUserRole__c.object
<CustomObject>
    <description>RFA R1 - Stores the Profit Center Associated Location Coordinators and Viewers (Hierarchy) within the RFA Application.</description>
    <fields>
        <fullName>ProfitCenter__c</fullName>
        <label>Profit Center</label>
        <referenceTo>ProfitCenter__c</referenceTo>
        <relationshipLabel>Profit Center User Roles</relationshipLabel>
        <relationshipName>Profit_Center_Associated_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Profit_Center_Associated_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <description>Location Coordinator -&gt; Coordinator -&gt; Removed on 2013/12/05</description>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Viewer - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer - Capital Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name_Unique__c</fullName>
        <label>User Name Unique</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Profit Center User Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProfitCenter__c</columns>
        <columns>UserName__c</columns>
        <columns>UserType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Users-{00000000}</displayFormat>
        <label>Profit Center User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profit Center User Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>